--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -20,7 +20,7 @@
         android:layout_alignParentStart="true"
         android:textSize="@dimen/h1"
         android:layout_centerHorizontal="true"
-        android:textColor="#330122" />
+        android:textColor="#fde510" />
 
     <Button
         android:layout_width="wrap_content"
@@ -40,7 +40,9 @@
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
         android:layout_below="@+id/textView"
-        android:layout_above="@+id/button"
-        android:layout_margin="20dp"
-        android:background="#64ffffff" />
+        android:background="#64ffffff"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
+        android:layout_marginTop="20dp"
+        android:layout_above="@+id/button" />
 </RelativeLayout>
